--- a/latex/includes/consts.tex
+++ b/latex/includes/consts.tex
@@ -6,8 +6,8 @@
 \newcommand{\Department}{<<Компьютерные системы и сети (ИУ-6)>>}
 \newcommand{\AuthorFull}{Козлов Владимир Михайлович}
 \newcommand{\Author}{Козлов В.М.}
-\newcommand{\Teacher}{}
-\newcommand{\group}{ИУ6-13М}
+\newcommand{\Teacher}{Григоренко В.М.}
+\newcommand{\group}{ИУ6-33М}
 \newcommand{\Year}{2025}
 \newcommand{\Country}{Россия}
 \newcommand{\City}{Москва}
