--- a/latex/includes/consts.tex
+++ b/latex/includes/consts.tex
@@ -1,7 +1,7 @@
 \newcommand{\Title}{Отчет о выполнении лабораторной работы}
 \newcommand{\TaskType}{лабораторная работа}
 \newcommand{\SubTitle}{по дисциплине <<Большие данные: инструменты и технологии>>}
-\newcommand{\LabTitle}{Spark} 
+\newcommand{\LabTitle}{Решение задач классификации и прогноза с помощью Apache ML} 
 \newcommand{\Faculty}{<<Информатика и системы управления>>}
 \newcommand{\Department}{<<Компьютерные системы и сети (ИУ-6)>>}
 \newcommand{\AuthorFull}{Козлов Владимир Михайлович}
